feat: signup page template

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/signupStyle.css" />
 </head>
 <body>
     <div class="signup">
         <h1> Sign Up </h1>
-        <form method="post" action="/signup"  class="signupform" >
+        <form method="post" action="/signup" class="signupform" >
             <h3> First Name </h3>
             <input value="<%= data && data.firstname ? data.firstname : '' %>" type="text" name="firstname" required placeholder="John" />
             <h3> Last Name </h3>
@@ -24,9 +24,10 @@
 
             <h3> Membership Password ( optional ) </h3>
             <input type="password" name="memberpwd"/>
+
             <button type="submit"> Sign up </button>
-            
-            <% if(errors && Array.isArray(errors)){ %>
+        
+            <% if(errors && Array.isArray(errors) && errors.length > 0){ %>
                 <div class="errorDiv">
                      <img class="exclamation" src="/assets/exclamation.svg" />
                      <p> <%= errors[0].msg %></p>
@@ -42,7 +43,6 @@
         </form>
     </div>
 
-    <!-- <p> Already a member ? Click <a href="/membership" >here</a></p> -->
-    <p>Click <a href="/login" >here</a> to login</p>
+    <p>Have an account ? Click <a href="/login" >here</a> to login</p>
 </body>
 </html>
