--- a/public/css/dashboardStyle.css
+++ b/public/css/dashboardStyle.css
@@ -13,6 +13,7 @@ html,body{
 
 .header
 {
+    color: greenyellow;
     font-size: 10px;
     position: relative;
     height: 5rem;
@@ -20,6 +21,7 @@ html,body{
     align-items: center;
     justify-content: space-around;
     background-color: rgb(27, 28, 29);
+    box-shadow: 0 2px 2px 0.5px greenyellow ;
 }
 
 .header>:nth-child(2){
@@ -57,6 +59,7 @@ html,body{
 }
 
 .messages{
+    background-color: rgb(37, 36, 36);
     position: relative;
     height: fit-content;
     padding: 2rem;
@@ -65,6 +68,7 @@ html,body{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    transition: transform 0.2s;
 }
 
 .headerfour{
@@ -74,8 +78,7 @@ html,body{
 }
 
 .messages:hover{
-    background-color: white;
-    color: black;
+    transform: scale(1.05);
 }
 
 .usermsg{
@@ -104,7 +107,7 @@ html,body{
 }
 
 .logout:hover{
-    color: rgb(179, 177, 177);
+    color: rgb(255, 255, 255);
     cursor: pointer;
 }
 
@@ -122,20 +125,15 @@ html,body{
     height: fit-content;
     width: fit-content;
     padding: 10px;
-    background-color: red;
+    background-color: greenyellow;
+}
+
+h2{
+    color: greenyellow;
 }
 
 #newMessage:hover{
-    background-color: rgb(0, 255, 26);
-}
-
-#overlay{
-    position: fixed;
-    min-height: 100%;
-    min-width: 100%;
-    background-color: white;
-    display: none;
-    z-index:1000;
+    background-color: rgb(27, 236, 48);
 }
 
 .overlayOpacity{
@@ -144,13 +142,29 @@ html,body{
 }
 
 #messageForm{
+    color: black;
+    font-weight: 600;
+    gap: 10px;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     height: 40%;
     width: 20%;
-    background-color: green;
+    background-color: rgb(191, 184, 184);
+    border-radius: 20px;
+}
+
+#messageForm input{
+    height: 25px;
+    width: 80%;
+    margin-bottom: 2rem;
+}
+
+textarea{
+    width: 80%;
+    max-width: 100%;
+    
 }
 
 .visible{
@@ -166,9 +180,10 @@ html,body{
 
 
 .deleteBtn{
+    margin-top: 2rem;
     width: 5rem;
     height: 2rem;
-    background-color: white;
+    background-color: red;
     color: black;
     border-radius: 20px;
 }
