--- a/views/clubAdmin.ejs
+++ b/views/clubAdmin.ejs
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/clubAdminStyle.css">
 </head>
 <body>
-    <h1> Welcome <%= user.firstname + user.lastname %> </h1>
+    <div class="clubAdmin">
+    <h1>Welcome <%= user.firstname %></h1>
     <form method="post" action="/clubadmin">
-        <div>
-            <label> Admin password </label>
-            <input type="password" name="adminpassword"/>
-            <button type="submit"> Submit </button>
-        </div>
-
-        <p> <a href="/dashboard" > Dashboard </a></p>
+        <label>Admin password</label>
+        <input type="password" name="adminpassword"/>
+        <button type="submit">Submit</button>
     </form>
+    <p><a href="/dashboard">Dashboard</a></p>
+</div>
+
 
 </body>
 </html>
