fix: layout changes

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -72,7 +72,7 @@
                 <p> Title </p>
                 <input type="text" name="title" placeholder="Title" />
                 <p> Content </p>
-                <textarea name="content" rows="5" cols="40"></textarea>
+                <textarea required name="content" rows="5" cols="40"></textarea>
                 <button type="submit"> Submit </button>
             </form>
     </div>
@@ -83,7 +83,6 @@
 
 
     <script>
-        const overlay = document.getElementById('overlay');
         const toggleForm = document.getElementById("messageForm");
         const newmsgbtn = document.getElementById('newMessage')
 
